@@ -155,6 +155,18 @@ else {
 					</td>
 				</tr>
 				<tr>
+					<td> 
+						<b><?php print _('Allow File Upload') ; ?> *</b><br/>
+						<span style="font-size: 90%"><i><?php print _('Should the student record include the option of a file upload?') ; ?> </i></span>
+					</td>
+					<td class="right">
+						<select name="allowFileUpload" id="allowFileUpload" style="width: 302px">
+							<option <?php if ($row["allowFileUpload"]=="N") { print "selected" ; } ?> value="N"><?php print _('No') ?></option>
+							<option <?php if ($row["allowFileUpload"]=="Y") { print "selected" ; } ?> value="Y"><?php print _('Yes') ?></option>
+						</select>
+					</td>
+				</tr>
+				<tr>
 					<td>
 						<span style="font-size: 90%"><i>* <?php print _("denotes a required field") ; ?></i></span>
 					</td>
