@@ -35,6 +35,14 @@ i18n: added French as non-active language for development
 	Added value to table gibboni18n
 	Added folder /i18n/fr_FR
 
+External Assessments: added ability to allow file upload of student results
+	Edited tables gibbonExternalAssessment, gibbonExternalAssessmentStudent
+	Edited files /modules/School Admin/externalAssessments_manage*.php
+	Edited files /modules/External Assessment/moduleFunctions.php, externalAssessment_details*.php
+
+CLI: added new cronable script to check who has not taken attendance, and email them a reminder
+	New file /cli/attendance_dailyIncompleteEmail.php
+
 
 v8.3.00
 -------
